--- a/package.json
+++ b/package.json
@@ -14,16 +14,47 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
+    "@babel/core": "^7.17.10",
     "@docusaurus/core": "2.3.0",
     "@docusaurus/preset-classic": "2.3.0",
+    "@docusaurus/theme-live-codeblock": "2.2.0",
+    "@docusaurus/types": "2.2.0",
     "@mdx-js/react": "^1.6.22",
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
     "clsx": "^1.2.1",
+    "css-loader": "^6.5.1",
+    "dedent": "^0.7.0",
+    "object.fromentries": "^2.0.5",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "prettier": "^2.6.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-native-ratings": "^8.1.0",
+    "react-native-safe-area-context": "^3.4.1",
+    "react-native-vector-icons": "^9.1.0",
+    "react-native-web": "^0.17.7",
+    "react-native-web-linear-gradient": "^1.1.2",
+    "react-view": "^2.3.7",
+    "style-loader": "^3.3.1"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.3.0"
+    "@docusaurus/module-type-aliases": "2.3.0",
+    "@dplus/rn-ui": "^0.1.0",
+    "@tsconfig/docusaurus": "^1.0.4",
+    "@types/assert": "^1.5.6",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
+    "babel-loader": "^8.2.4",
+    "fast-glob": "^3.2.11",
+    "jest": "^27.5.1",
+    "process": "^0.11.10",
+    "typescript": "^4.6.3"
   },
   "browserslist": {
     "production": [
